# Scrapip

./: Cargo.toml
src/: main.rs
src/views/: builder.rs  mod.rs
